# Course-DjangoRest

./: .coveragerc  .flake8  .gitignore  Procfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy-heroku.yml  django.yml
base_static/global/css/: style.css
base_templates/global/: base.html
base_templates/global/partials/: footer.html  head.html  header.html  search.html
contrib/: env-sample
project/: settings.py  urls.py  wsgi.py
project/authors/: apps.py  forms.py  urls.py  views.py
project/authors/forms/: login.py  register_form.py
project/authors/templates/authors/pages/: login.html  register_view.html
project/authors/tests/: test_author_register_form.py
project/recipes/: admin.py  models.py  tests.py  urls.py  views.py
project/recipes/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_category_and_more.py  0003_alter_recipe_slug.py
project/recipes/templates/recipes/: home.html
project/recipes/templates/recipes/pages/: category.html  home.html  recipe_view.html  search.html
project/recipes/templates/recipes/partials/: head.html  header.html  messages.html  pagination.html  recipe.html  search.html
project/recipes/tests/: test_recipe_base.py  test_recipe_base_category.py  test_recipe_detail_view.py  test_recipe_home_view.py  test_recipe_model.py  test_recipe_search_view.py  test_recipe_urls.py  test_recipe_views.py
tests/recipes/: base.py  test_home_page.py
utils/: browser.py  django_forms.py
utils/recipes/: factory.py  pagination.py  test_paginator.py
