[tool.poetry]
name = "course-djangorest"
version = "0.1.0"
description = "Course destinated for learning Django and Django rest"
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
